--- a/TemDeTudo/Views/Franchise/Index.cshtml
+++ b/TemDeTudo/Views/Franchise/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TemDeTudo.Models.Department>
+﻿@model IEnumerable<UltraStore.Models.Franchise>
 
 @{
     ViewData["Title"] = "Index";
