--- a/TemDeTudo/Views/Sellers/Details.cshtml
+++ b/TemDeTudo/Views/Sellers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TemDeTudo.Models.Seller
+﻿@model UltraStore.Models.Seller
 
 <h1>Detalhes do Vendedor</h1>
 
@@ -24,7 +24,7 @@
         <dd>
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
-        <dt>
+@*         <dt>
             @Html.DisplayNameFor(model => model.Salary)
         </dt>
         <dd>
@@ -35,6 +35,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Department.Name)
-        </dd>
+        </dd> *@
     </dl>
 </div>
