--- a/TemDeTudo/Views/Sellers/Index.cshtml
+++ b/TemDeTudo/Views/Sellers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TemDeTudo.Models.Seller>
+﻿@model IEnumerable<UltraStore.Models.Seller>
 
 @{
     ViewData["Title"] = "Index do Vendedores";
@@ -25,12 +25,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.BirthDate)
             </th>
-            <th>
+@*             <th>
                 @Html.DisplayNameFor(model => model.Salary)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Department)
-            </th>
+            </th> *@
             <th></th>
         </tr>
     </thead>
