--- a/TemDeTudo/Views/_ViewImports.cshtml
+++ b/TemDeTudo/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TemDeTudo
-@using TemDeTudo.Models
+﻿@using UltraStore
+@using UltraStore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
