--- a/TemDeTudo/Views/Clients/Delete.cshtml
+++ b/TemDeTudo/Views/Clients/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TemDeTudo.Models.Product
+﻿@model UltraStore.Models.Client
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>Client</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -16,12 +16,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
         </dd>
     </dl>
     
