--- a/TemDeTudo/Views/Developers/Delete.cshtml
+++ b/TemDeTudo/Views/Developers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TemDeTudo.Models.Department
+﻿@model UltraStore.Models.Developer
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Department</h4>
+    <h4>Developer</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
