--- a/TemDeTudo/Views/Franchise/Details.cshtml
+++ b/TemDeTudo/Views/Franchise/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TemDeTudo.Models.Department
+﻿@model UltraStore.Models.Franchise
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Department</h4>
+    <h4>Franchise</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
