--- a/TemDeTudo/Views/Publisher/Index.cshtml
+++ b/TemDeTudo/Views/Publisher/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TemDeTudo.Models.Product>
+﻿@model IEnumerable<UltraStore.Models.Publisher>
 
 @{
     ViewData["Title"] = "Index";
@@ -15,9 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
+@*             <th>
                 @Html.DisplayNameFor(model => model.Description)
-            </th>
+            </th> *@
             <th></th>
         </tr>
     </thead>
@@ -27,9 +27,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
+@*             <td>
                 @Html.DisplayFor(modelItem => item.Description)
-            </td>
+            </td> *@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
