--- a/TemDeTudo/Views/SalesRecords/Index.cshtml
+++ b/TemDeTudo/Views/SalesRecords/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TemDeTudo.Models.SalesRecord>
+﻿@model IEnumerable<UltraStore.Models.SalesRecord>
 
 @{
     ViewData["Title"] = "Index";
