--- a/TemDeTudo/Views/Sellers/Delete.cshtml
+++ b/TemDeTudo/Views/Sellers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TemDeTudo.Models.Seller
+﻿@model UltraStore.Models.Seller
 
 <h1>Deletar Vendedor</h1>
 
@@ -29,7 +29,7 @@
         <dd>
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
-        <dt>
+        @* <dt>
             @Html.DisplayNameFor(model => model.Salary)
         </dt>
         <dd>
@@ -40,7 +40,7 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Department.Name)
-        </dd>
+        </dd> *@
     </dl>
 
     <form asp-action="Delete">
