--- a/TemDeTudo/Views/Sellers/Edit.cshtml
+++ b/TemDeTudo/Views/Sellers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TemDeTudo.Models.ViewModels.SellerFormViewModel
+﻿@model UltraStore.Models.ViewModels.SellerFormViewModel
 
 @{
     ViewData["Title"] = "Update Seller";
@@ -28,7 +28,7 @@
                 <input asp-for="Seller.BirthDate" class="form-control" />
                 <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*             <div class="form-group">
                 <label asp-for="Seller.Salary" class="control-label"></label>
                 <input asp-for="Seller.Salary" class="form-control" />
                 <span asp-validation-for="Seller.Salary" class="text-danger"></span>
@@ -36,7 +36,7 @@
             <div class="form-group">
              <label asp-for="Seller.DepartmentId" class="control-label"></label>
                 <select asp-for="Seller.DepartmentId" class ="form-control" asp-items="@(new SelectList(Model.Departments, "Id", "Name"))"></select>
-            </div>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Update" class="btn btn-primary" />
             </div>
