--- a/UltraStore/Views/Sellers/Create.cshtml
+++ b/UltraStore/Views/Sellers/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model UltraStore.Models.ViewModels.SellerFormViewModel
+﻿@model UltraStore.Models.Seller
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Create</h1>
 
 <h4>Seller</h4>
 <hr />
@@ -13,29 +13,20 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Seller.Name" class="control-label"></label>
-                <input asp-for="Seller.Name" class="form-control" />
-                <span asp-validation-for="Seller.Name" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Seller.Email" class="control-label"></label>
-                <input asp-for="Seller.Email" class="form-control" />
-                <span asp-validation-for="Seller.Email" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Seller.BirthDate" class="control-label"></label>
-                <input asp-for="Seller.BirthDate" class="form-control" />
-                <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>
+                <label asp-for="BirthDate" class="control-label"></label>
+                <input asp-for="BirthDate" class="form-control" />
+                <span asp-validation-for="BirthDate" class="text-danger"></span>
             </div>
-            @* <div class="form-group">
-                <label asp-for="Seller.Salary" class="control-label"></label>
-                <input asp-for="Seller.Salary" class="form-control" />
-                <span asp-validation-for="Seller.Salary" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-             <label asp-for="Seller.DepartmentId" class="control-label"></label>
-                <select asp-for="Seller.DepartmentId" class ="form-control" asp-items="@(new SelectList(Model.Departments, "Id", "Name"))"></select>
-            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
