--- a/UltraStore/Views/Sellers/Delete.cshtml
+++ b/UltraStore/Views/Sellers/Delete.cshtml
@@ -1,51 +1,39 @@
 ﻿@model UltraStore.Models.Seller
 
-<h1>Deletar Vendedor</h1>
+@{
+    ViewData["Title"] = "Delete";
+}
 
-<h3>
-    Você tem certeza que deseja remover o vendedor
-    @Html.DisplayFor(model => model.Name)?
- </h3>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Seller Details</h4>
+    <h4>Seller</h4>
     <hr />
-    <dl>
-        <dt>
+    <dl class="row">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd>
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd>
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BirthDate)
         </dt>
-        <dd>
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
-        @* <dt>
-            @Html.DisplayNameFor(model => model.Salary)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Salary)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Department)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Department.Name)
-        </dd> *@
     </dl>
-
+    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger"/>
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
     </form>
-
 </div>
