--- a/UltraStore/Views/Sellers/Details.cshtml
+++ b/UltraStore/Views/Sellers/Details.cshtml
@@ -1,40 +1,36 @@
 ﻿@model UltraStore.Models.Seller
 
-<h1>Detalhes do Vendedor</h1>
+@{
+    ViewData["Title"] = "Details";
+}
+
+<h1>Details</h1>
 
 <div>
     <h4>Seller</h4>
     <hr />
-    <dl>
-        <dt>
+    <dl class="row">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd>
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd>
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BirthDate)
         </dt>
-        <dd>
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
-@*         <dt>
-            @Html.DisplayNameFor(model => model.Salary)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Salary)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Department)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Department.Name)
-        </dd> *@
     </dl>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
