--- a/UltraStore/Views/Sellers/Index.cshtml
+++ b/UltraStore/Views/Sellers/Index.cshtml
@@ -1,18 +1,14 @@
 ﻿@model IEnumerable<UltraStore.Models.Seller>
 
 @{
-    ViewData["Title"] = "Index do Vendedores";
+    ViewData["Title"] = "Index";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<p>
-    <a asp-action="Report">Report</a>
-</p>
-
 <table class="table">
     <thead>
         <tr>
@@ -25,12 +21,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.BirthDate)
             </th>
-@*             <th>
-                @Html.DisplayNameFor(model => model.Salary)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department)
-            </th> *@
             <th></th>
         </tr>
     </thead>
@@ -46,12 +36,6 @@
             <td>
                 @Html.DisplayFor(modelItem => item.BirthDate)
             </td>
-@*             <td>
-                @Html.DisplayFor(modelItem => item.Salary)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Department.Name)
-            </td> *@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
