Inserção do Release Date e PlatformId em Index cshtml  de Games

--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -30,6 +30,9 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.ReleaseDate)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.DeveloperId)
             </th>
             <th>
@@ -37,6 +40,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PublisherId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PlatformId)
             </th>
         </tr>
     </thead>
