--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -57,6 +57,7 @@
 
         <br /> 
         <button type="submit" class="btn btn-primary">Create</button>
+        <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
     </div>
     
 }
