--- a/Views/Clients/Create.cshtml
+++ b/Views/Clients/Create.cshtml
@@ -37,6 +37,7 @@
         <span asp-validation-for="BirthDate" class="text-danger"></span>
     </div>
 
-
+    <br />
     <button type="submit" class="btn btn-primary">Create</button>
+    <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
 }
