--- a/Views/Clients/Details.cshtml
+++ b/Views/Clients/Details.cshtml
@@ -10,8 +10,8 @@
     <h4>Client</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+        <dt class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
@@ -27,6 +27,7 @@
         </dd>
 
     </dl>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <br />
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a> |
+    <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
 </div>
