--- a/Views/Games/Delete.cshtml
+++ b/Views/Games/Delete.cshtml
@@ -11,8 +11,8 @@
     <h4>Game</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+        <dt class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
@@ -21,13 +21,14 @@
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Franchise.Id)
+            @Html.DisplayFor(model => model.Franchise.Name)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
+
     </form>
 </div>
