--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -10,8 +10,8 @@
     <h4>Game</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+        <dt class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
@@ -20,19 +20,20 @@
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Franchise.Id)
+            @Html.DisplayFor(model => model.Franchise.Name)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Developer.Id)
+            @Html.DisplayFor(model => model.Developer.Name)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Publisher.Id)
+            @Html.DisplayFor(model => model.Publisher.Name)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Platforms.Id)
+            @Html.DisplayFor(model => model.Platforms.Name)
         </dd>
 
     </dl>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> 
+    <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
+
 </div>
