--- a/Views/Games/Edit.cshtml
+++ b/Views/Games/Edit.cshtml
@@ -59,14 +59,13 @@
 
                 <br />
                 <button type="submit" class="btn btn-primary">Edit</button>
+                <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{
