--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Game</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a href="@Url.Action("Create")" class="btn btn-primary">Create New Platform</a>
 </p>
 <table class="table">
 @*     <thead>
@@ -73,10 +73,11 @@
             <td>
                  @Html.DisplayFor(modelItem => item.Platforms.Name)
             </td>
+
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a href="@Url.Action("Edit", new { id = item.Id })" class="btn btn-warning">Edit</a>
+                <a href="@Url.Action("Details",  new { id = item.Id })" class="btn btn-info">Details</a>
+                <a href="@Url.Action("Delete", new { id = item.Id })" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
