--- a/Views/NF/Delete.cshtml
+++ b/Views/NF/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model UltraStore.Models.Seller
+﻿@* @model UltraStore.Models.Nota
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,7 +11,7 @@
     <h4>Seller</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-10">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
@@ -31,3 +31,4 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+ *@
