--- a/Views/Platforms/Details.cshtml
+++ b/Views/Platforms/Details.cshtml
@@ -18,7 +18,9 @@
         </dd>
     </dl>
 </div>
+<br />
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a> |
+    <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
 </div>
