--- a/Views/Publisher/Delete.cshtml
+++ b/Views/Publisher/Delete.cshtml
@@ -21,10 +21,11 @@
             @Html.DisplayFor(model => model.Country)
         </dd>
     </dl>
-    
+    <br />
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
