--- a/Views/Sellers/Create.cshtml
+++ b/Views/Sellers/Create.cshtml
@@ -31,5 +31,8 @@
         <span asp-validation-for="BirthDate" class="text-danger"></span>
     </div>
 
+    <br />
     <button type="submit" class="btn btn-primary">Create</button>
+    <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
+
 }
