--- a/Views/Sellers/Delete.cshtml
+++ b/Views/Sellers/Delete.cshtml
@@ -11,17 +11,19 @@
     <h4>Seller</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+        <dt class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
+    <br />
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
+
     </form>
 </div>
