fix: change every page title

--- a/Views/Clients/Delete.cshtml
+++ b/Views/Clients/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Client
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Client";
 }
 
 <h1>Delete</h1>
