--- a/Views/Clients/Details.cshtml
+++ b/Views/Clients/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Client
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Client Details";
 }
 
 <h1>Details</h1>
