--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UltraStore.Models.Client>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Client Index";
 }
 
 <h1>Clients Index</h1>
