--- a/Views/Developers/Create.cshtml
+++ b/Views/Developers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Developer
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Developer";
 }
 
 <h1>Create</h1>
