--- a/Views/Developers/Delete.cshtml
+++ b/Views/Developers/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Developer
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Developer";
 }
 
 <h1>Delete</h1>
