--- a/Views/Developers/Index.cshtml
+++ b/Views/Developers/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UltraStore.Models.Developer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Developer Index";
 }
 
 <h1>Developers Index</h1>
