--- a/Views/Franchises/Delete.cshtml
+++ b/Views/Franchises/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Franchise
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Franchise";
 }
 
 <h1>Delete</h1>
