--- a/Views/Franchises/Edit.cshtml
+++ b/Views/Franchises/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Franchise
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Franchise";
 }
 
 <h1>Edit</h1>
