--- a/Views/Franchises/Index.cshtml
+++ b/Views/Franchises/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UltraStore.Models.Franchise>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Franchise Index";
 }
 
 <h1>Franchises Index</h1>
