--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Game
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Game";
 }
 
 <h1>Create</h1>
