--- a/Views/Games/Delete.cshtml
+++ b/Views/Games/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Game
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Game";
 }
 
 <h1>Delete</h1>
