--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UltraStore.Models.Game>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Game Index";
 }
 
 <h1>Games Index</h1>
