--- a/Views/Publishers/Create.cshtml
+++ b/Views/Publishers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Publisher
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Publisher";
 }
 
 <h1>Create</h1>
