--- a/Views/Publishers/Details.cshtml
+++ b/Views/Publishers/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Publisher
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Publisher Details";
 }
 
 <h1>Details</h1>
