--- a/Views/Publishers/Edit.cshtml
+++ b/Views/Publishers/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Publisher
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Publisher";
 }
 
 <h1>Edit</h1>
