--- a/Views/Publishers/Index.cshtml
+++ b/Views/Publishers/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UltraStore.Models.Publisher>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Publisher Index";
 }
 
 <h1>Publishers Index</h1>
