--- a/Views/Receipts/Create.cshtml
+++ b/Views/Receipts/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Receipt
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Receipt";
 }
 
 <h1>Create</h1>
