--- a/Views/Receipts/Details.cshtml
+++ b/Views/Receipts/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Receipt
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Receipt Details";
 }
 
 <h1>Details</h1>
