--- a/Views/Receipts/Edit.cshtml
+++ b/Views/Receipts/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Receipt
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Receipt";
 }
 
 <h1>Edit</h1>
