--- a/Views/Receipts/Index.cshtml
+++ b/Views/Receipts/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UltraStore.Models.Receipt>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Receipt Index";
 }
 
 <h1>Receipts Index</h1>
