--- a/Views/Sellers/Create.cshtml
+++ b/Views/Sellers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Seller
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Seller";
 }
 
 <h1>Create</h1>
