--- a/Views/Sellers/Delete.cshtml
+++ b/Views/Sellers/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Seller
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Seller";
 }
 
 <h1>Delete</h1>
