--- a/Views/Sellers/Details.cshtml
+++ b/Views/Sellers/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Seller
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Seller Details";
 }
 
 <h1>Details</h1>
