--- a/Views/Softwares/Create.cshtml
+++ b/Views/Softwares/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Software
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Software";
 }
 
 <h1>Create</h1>
