--- a/Views/Softwares/Delete.cshtml
+++ b/Views/Softwares/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Software
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Software";
 }
 
 <h1>Delete</h1>
