--- a/Views/Softwares/Details.cshtml
+++ b/Views/Softwares/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Software
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Software Details";
 }
 
 <h1>Details</h1>
