--- a/Views/Softwares/Index.cshtml
+++ b/Views/Softwares/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UltraStore.Models.Software>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Software Index";
 }
 
 <h1>Softwares Index</h1>
