--- a/Views/Clients/Create.cshtml
+++ b/Views/Clients/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Client
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Client";
 }
 
 <h1>Create</h1>
