--- a/Views/Developers/Details.cshtml
+++ b/Views/Developers/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Developer
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Developer Details";
 }
 
 <h1>Details</h1>
