--- a/Views/Developers/Edit.cshtml
+++ b/Views/Developers/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Developer
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Developer";
 }
 
 <h1>Edit</h1>
