--- a/Views/Franchises/Create.cshtml
+++ b/Views/Franchises/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Franchise
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Franchise";
 }
 
 <h1>Create</h1>
