--- a/Views/Franchises/Details.cshtml
+++ b/Views/Franchises/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Franchise
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Franchise Details";
 }
 
 <h1>Details</h1>
