--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Game
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Game Details";
 }
 
 <h1>Details</h1>
