--- a/Views/Publishers/Delete.cshtml
+++ b/Views/Publishers/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Publisher
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Publisher";
 }
 
 <h1>Delete</h1>
