--- a/Views/Receipts/Delete.cshtml
+++ b/Views/Receipts/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Receipt
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Receipt";
 }
 
 <h1>Delete</h1>
