--- a/Views/Sellers/Index.cshtml
+++ b/Views/Sellers/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UltraStore.Models.Seller>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Seller Index";
 }
 
 <h1>Sellers Index</h1>
