--- a/Views/Softwares/Edit.cshtml
+++ b/Views/Softwares/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UltraStore.Models.Software
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Software";
 }
 
 <h1>Edit</h1>
