--- a/Views/Shared/Error404.cshtml
+++ b/Views/Shared/Error404.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "404 Error - Page Not Found";
+    ViewData["Title"] = "Erro 404 - Página não encontrada";
 }
 
 <!DOCTYPE html>
@@ -16,9 +16,9 @@
 <body>
     <div class="container error-container">
         <div class="error-code">404</div>
-        <div class="error-message">Page Not Found</div>
-        <p>Sorry, the page you are looking for does not exist.</p>
-        <a href="/" class="back-link">Return to Home</a>
+        <div class="error-message">Página não encontrada</div>
+        <p>Desculpe, a página que você está procurando não existe.</p>
+        <a href="/" class="back-link">Voltar pra página principal</a>
     </div>
 </body>
 
