changing home page text

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,14 +4,16 @@
     ViewData["Resultado"] = x;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Olá! Seja bem vindo.</h1>
-    <p> 
-        Somos a UltraStore
+<div class="text-center mt-5">
+    <h1 class="display-4">Olá! Seja bem-vindo.</h1>
+    <p class="fs-4">
+        Nós somos a UltraStore,
     </p>
     <p>
-        A UltraStore é o destino perfeito para os amantes de games! Se você é fã de jogos de última geração, colecionador de itens exclusivos ou apenas busca uma experiência divertida e imersiva, aqui é o seu lugar. Nossa loja oferece uma vasta seleção de jogos para todas as plataformas – de consoles a PCs, além de acessórios, merchandise, e itens exclusivos que você não encontra em nenhum outro lugar.
+        o destino perfeito para os amantes de games! Se você é fã de jogos de última geração, colecionador de itens exclusivos ou apenas busca uma experiência divertida e imersiva, aqui é o seu lugar. Nossa loja oferece uma vasta seleção de jogos para todas as plataformas – de consoles a PCs, além de acessórios, merchandise, e itens exclusivos que você não encontra em nenhum outro lugar.
 
         Com uma equipe apaixonada por games e sempre atualizada com as novidades do mercado, garantimos um atendimento de excelência e um ambiente que reflete a cultura gamer. Na UltraStore, você não apenas compra, você vive o jogo!
     </p>
 </div>
+
+
