--- a/Views/Developers/Create.cshtml
+++ b/Views/Developers/Create.cshtml
@@ -33,15 +33,11 @@
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" /> <a asp-action="Index" class="btn btn-outline-primary">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</div
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
