--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -59,14 +59,10 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" /> <a asp-action="Index" class="btn btn-outline-primary">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
