feat: create shopping cart view

--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -53,10 +53,10 @@
             @Html.DisplayFor(model => model.Franchise.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Platforms)
+            @Html.DisplayNameFor(model => model.Software)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Platforms.Manufacturer)
+            @Html.DisplayFor(model => model.Software.Manufacturer)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
