--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.Franchise)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Platforms)
+                @Html.DisplayNameFor(model => model.Software)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Rating)
@@ -70,7 +70,7 @@
                 @Html.DisplayFor(modelItem => item.Franchise.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Platforms.Manufacturer)
+                @Html.DisplayFor(modelItem => item.Software.Manufacturer)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rating)
