--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -45,8 +45,8 @@
                 <select asp-for="FranchiseId" class ="form-control" asp-items="ViewBag.FranchiseId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="PlatformsId" class="control-label"></label>
-                <select asp-for="PlatformsId" class ="form-control" asp-items="ViewBag.PlatformsId"></select>
+                <label asp-for="SoftwareId" class="control-label"></label>
+                <select asp-for="SoftwareId" class="form-control" asp-items="ViewBag.PlatformsId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
