--- a/Views/Games/Edit.cshtml
+++ b/Views/Games/Edit.cshtml
@@ -49,9 +49,9 @@
                 <span asp-validation-for="FranchiseId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PlatformsId" class="control-label"></label>
-                <select asp-for="PlatformsId" class="form-control" asp-items="ViewBag.PlatformsId"></select>
-                <span asp-validation-for="PlatformsId" class="text-danger"></span>
+                <label asp-for="SoftwareId" class="control-label"></label>
+                <select asp-for="SoftwareId" class="form-control" asp-items="ViewBag.PlatformsId"></select>
+                <span asp-validation-for="SoftwareId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
