--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,57 +1,57 @@
 ﻿@{
     ViewData["Title"] = "Política de Privacidade";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="fade-in">@ViewData["Title"]</h1>
 
-<p>Bem-vindo à nossa Política de Privacidade. Aqui na UltraStore, estamos comprometidos em proteger a privacidade de nossos usuários. Esta política de privacidade descreve como coletamos, usamos, armazenamos e protegemos as informações dos nossos clientes ao interagir com nossa loja online de jogos digitais e físicos.</p>
+<p class="fade-in">Bem-vindo à nossa Política de Privacidade. Aqui na UltraStore, estamos comprometidos em proteger a privacidade de nossos usuários. Esta política de privacidade descreve como coletamos, usamos, armazenamos e protegemos as informações dos nossos clientes ao interagir com nossa loja online de jogos digitais e físicos.</p>
 
-<h2>1. Informações que Coletamos</h2>
-<p>Coletamos informações pessoais quando você se registra em nosso site, faz uma compra ou interage conosco de outras formas. As informações podem incluir:</p>
-<ul>
-    <li><strong>Informações Pessoais:</strong> Nome, e-mail, endereço de entrega, número de telefone.</li>
-    <li><strong>Informações de Pagamento:</strong> Detalhes de pagamento (cartão de crédito, boleto, etc.) são processados através de parceiros de pagamento seguros e não armazenamos essas informações em nossos servidores.</li>
-    <li><strong>Informações de Navegação:</strong> Informações sobre como você usa o site, incluindo histórico de compras, preferências de navegação e comportamento no site.</li>
-    <li><strong>Informações de Conta:</strong> Senha e dados de autenticação para acesso à sua conta em nossa loja online.</li>
+<h2 class="fade-in">1. Informações que Coletamos</h2>
+<p class="fade-in">Coletamos informações pessoais quando você se registra em nosso site, faz uma compra ou interage conosco de outras formas. As informações podem incluir:</p>
+<ul class="fade-in">
+    <li><strong class="fade-in">Informações Pessoais:</strong> Nome, e-mail, endereço de entrega, número de telefone.</li>
+    <li><strong class="fade-in">Informações de Pagamento:</strong> Detalhes de pagamento (cartão de crédito, boleto, etc.) são processados através de parceiros de pagamento seguros e não armazenamos essas informações em nossos servidores.</li>
+    <li><strong class="fade-in">Informações de Navegação:</strong> Informações sobre como você usa o site, incluindo histórico de compras, preferências de navegação e comportamento no site.</li>
+    <li><strong class="fade-in">Informações de Conta:</strong> Senha e dados de autenticação para acesso à sua conta em nossa loja online.</li>
 </ul>
 
-<h2>2. Como Usamos Suas Informações</h2>
-<p>Utilizamos as informações coletadas para as seguintes finalidades:</p>
-<ul>
-    <li><strong>Processamento de Pedidos:</strong> Para processar e entregar seus pedidos de jogos digitais e físicos, incluindo comunicação sobre status de pedidos e envio.</li>
-    <li><strong>Melhoria da Experiência do Usuário:</strong> Para personalizar sua experiência no site, oferecer recomendações de jogos e melhorar os serviços oferecidos.</li>
-    <li><strong>Promoções e Marketing:</strong> Para enviar e-mails promocionais, ofertas e novidades relacionadas a jogos e produtos que podem ser do seu interesse (você pode optar por não receber essas comunicações a qualquer momento).</li>
-    <li><strong>Atendimento ao Cliente:</strong> Para responder a dúvidas, reclamações ou solicitações relacionadas aos seus pedidos e à sua conta.</li>
+<h2 class="fade-in">2. Como Usamos Suas Informações</h2>
+<p class="fade-in">Utilizamos as informações coletadas para as seguintes finalidades:</p>
+<ul class="fade-in">
+    <li><strong class="fade-in">Processamento de Pedidos:</strong> Para processar e entregar seus pedidos de jogos digitais e físicos, incluindo comunicação sobre status de pedidos e envio.</li>
+    <li><strong class="fade-in">Melhoria da Experiência do Usuário:</strong> Para personalizar sua experiência no site, oferecer recomendações de jogos e melhorar os serviços oferecidos.</li>
+    <li><strong class="fade-in">Promoções e Marketing:</strong> Para enviar e-mails promocionais, ofertas e novidades relacionadas a jogos e produtos que podem ser do seu interesse (você pode optar por não receber essas comunicações a qualquer momento).</li>
+    <li><strong class="fade-in">Atendimento ao Cliente:</strong> Para responder a dúvidas, reclamações ou solicitações relacionadas aos seus pedidos e à sua conta.</li>
 </ul>
 
-<h2>3. Compartilhamento de Informações</h2>
-<p>Não vendemos nem alugamos suas informações pessoais. No entanto, podemos compartilhar suas informações com terceiros para realizar as funções descritas abaixo:</p>
-<ul>
-    <li><strong>Provedores de Serviços:</strong> Compartilhamos suas informações com empresas parceiras, como processadores de pagamento, empresas de entrega e plataformas de marketing.</li>
-    <li><strong>Obrigações Legais:</strong> Podemos compartilhar suas informações quando exigido por lei, para proteger nossos direitos legais ou para cumprir com processos legais.</li>
+<h2 class="fade-in">3. Compartilhamento de Informações</h2>
+<p class="fade-in">Não vendemos nem alugamos suas informações pessoais. No entanto, podemos compartilhar suas informações com terceiros para realizar as funções descritas abaixo:</p>
+<ul class="fade-in">
+    <li><strong class="fade-in">Provedores de Serviços:</strong> Compartilhamos suas informações com empresas parceiras, como processadores de pagamento, empresas de entrega e plataformas de marketing.</li>
+    <li><strong class="fade-in">Obrigações Legais:</strong> Podemos compartilhar suas informações quando exigido por lei, para proteger nossos direitos legais ou para cumprir com processos legais.</li>
 </ul>
 
-<h2>4. Proteção de Dados</h2>
-<p>Implementamos medidas de segurança adequadas para proteger suas informações pessoais contra acesso não autorizado, alteração ou divulgação. Isso inclui o uso de criptografia para transações financeiras e outras práticas de segurança para proteger dados sensíveis. No entanto, nenhum sistema de segurança é 100% seguro, e não podemos garantir a segurança absoluta das suas informações.</p>
+<h2 class="fade-in">4. Proteção de Dados</h2>
+<p class="fade-in">Implementamos medidas de segurança adequadas para proteger suas informações pessoais contra acesso não autorizado, alteração ou divulgação. Isso inclui o uso de criptografia para transações financeiras e outras práticas de segurança para proteger dados sensíveis. No entanto, nenhum sistema de segurança é 100% seguro, e não podemos garantir a segurança absoluta das suas informações.</p>
 
-<h2>5. Seus Direitos sobre Seus Dados</h2>
-<p>Você tem o direito de acessar, corrigir ou excluir as informações pessoais que mantemos sobre você. Além disso, você pode optar por não receber comunicações de marketing a qualquer momento, clicando no link de descadastramento presente nos e-mails que enviamos. Para exercer seus direitos, entre em contato conosco por meio das informações abaixo.</p>
+<h2 class="fade-in">5. Seus Direitos sobre Seus Dados</h2>
+<p class="fade-in">Você tem o direito de acessar, corrigir ou excluir as informações pessoais que mantemos sobre você. Além disso, você pode optar por não receber comunicações de marketing a qualquer momento, clicando no link de descadastramento presente nos e-mails que enviamos. Para exercer seus direitos, entre em contato conosco por meio das informações abaixo.</p>
 
-<h2>6. Cookies e Tecnologias de Rastreamento</h2>
-<p>Utilizamos cookies e outras tecnologias de rastreamento para melhorar a experiência do usuário em nosso site. Cookies são pequenos arquivos armazenados no seu dispositivo que nos ajudam a lembrar suas preferências, personalizar sua experiência e analisar o tráfego do site.</p>
-<p>Você pode controlar o uso de cookies através das configurações do seu navegador. No entanto, desabilitar cookies pode afetar algumas funcionalidades do nosso site.</p>
+<h2 class="fade-in">6. Cookies e Tecnologias de Rastreamento</h2>
+<p class="fade-in">Utilizamos cookies e outras tecnologias de rastreamento para melhorar a experiência do usuário em nosso site. Cookies são pequenos arquivos armazenados no seu dispositivo que nos ajudam a lembrar suas preferências, personalizar sua experiência e analisar o tráfego do site.</p>
+<p class="fade-in">Você pode controlar o uso de cookies através das configurações do seu navegador. No entanto, desabilitar cookies pode afetar algumas funcionalidades do nosso site.</p>
 
-<h2>7. Retenção de Dados</h2>
-<p>Reteremos suas informações pessoais pelo tempo necessário para cumprir com os fins descritos nesta política, incluindo para cumprir com obrigações legais, resolver disputas e fazer cumprir nossos acordos.</p>
+<h2 class="fade-in">7. Retenção de Dados</h2>
+<p class="fade-in">Reteremos suas informações pessoais pelo tempo necessário para cumprir com os fins descritos nesta política, incluindo para cumprir com obrigações legais, resolver disputas e fazer cumprir nossos acordos.</p>
 
-<h2>8. Alterações na Política de Privacidade</h2>
-<p>Podemos atualizar nossa política de privacidade de tempos em tempos. Quando fizermos alterações substanciais, publicaremos a versão atualizada nesta página com uma nova data de vigência. Recomendamos que você revise esta política regularmente para se manter informado sobre como estamos protegendo suas informações.</p>
+<h2 class="fade-in">8. Alterações na Política de Privacidade</h2>
+<p class="fade-in">Podemos atualizar nossa política de privacidade de tempos em tempos. Quando fizermos alterações substanciais, publicaremos a versão atualizada nesta página com uma nova data de vigência. Recomendamos que você revise esta política regularmente para se manter informado sobre como estamos protegendo suas informações.</p>
 
-<h2>9. Contato</h2>
-<p>Se você tiver alguma dúvida sobre esta política de privacidade ou sobre como tratamos suas informações pessoais, entre em contato conosco:</p>
-<ul>
-    <li><strong>E-mail:</strong> <a href="mailto:raul@ultrastore.com">contato@ultrastore.com</a></li>
-    <li><strong>Telefone:</strong> +47 99235 1724</li>
-    <li><strong>Endereço:</strong> Rua Guilherme Gemballa, 260, Rio do Sul, SC, Brasil</li>
+<h2 class="fade-in">9. Contato</h2>
+<p class="fade-in">Se você tiver alguma dúvida sobre esta política de privacidade ou sobre como tratamos suas informações pessoais, entre em contato conosco:</p>
+<ul class="fade-in">
+    <li><strong class="fade-in">E-mail:</strong> <a href="mailto:raul@ultrastore.com">raul@ultrastore.com</a></li>
+    <li><strong class="fade-in">Telefone:</strong> +47 99235 1724</li>
+    <li><strong class="fade-in">Endereço:</strong> Rua Guilherme Gemballa, 260, Rio do Sul, SC, Brasil</li>
 </ul>
 
-<p>Última atualização: Novembro de 2024</p>
+<p class="fade-in">Última atualização: Novembro de 2024</p>
