--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,6 +56,14 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Reviews" asp-action="Index">Reviews</a>
                         </li>
                     </ul>
+                    <a class="nav-link d-flex align-items-center text-light" asp-area="" asp-controller="Cart" asp-action="Index">
+                        <img src="~/shoppingcart.png" 
+                             alt="Carrinho" 
+                             width="32" 
+                             height="32" 
+                             class="me-2" 
+                             style="background-color: transparent; border-radius: 50%; object-fit: cover;" />
+                    </a>
 
                     <!-- Search Form -->
 @*                     <form class="d-flex">
