feat: create admin authorization in non-public views

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,16 +6,14 @@
 
 <div class="text-center mt-5">
     <h1 class="display-4 fade-in">
-        Olá! Seja bem-vindo.
+        ControlQuest.
     </h1>
     <p class="fade-in fs-4">
         
-        Somos a UltraStore,
+        Bem vindo ao ControlQuest, o painel administrativo da LVL-UP Store.
     </p>
     <p class="fade-in fs-6">
+        Crie, edite, delete ou visualize as entidades através da Navbar. Basta um clique na entidade que você quer, e nosso painel lhe redirecionará.
         
-        o destino perfeito para os amantes de games! Se você é fã de jogos de última geração, colecionador de itens exclusivos ou apenas busca uma experiência divertida e imersiva, aqui é o seu lugar. Nossa loja oferece uma vasta seleção de jogos para todas as plataformas – de consoles a PCs, além de acessórios, merchandise, e itens exclusivos que você não encontra em nenhum outro lugar.
-
-        Com uma equipe apaixonada por games e sempre atualizada com as novidades do mercado, garantimos um atendimento de excelência e um ambiente que reflete a cultura gamer. Na UltraStore, você não apenas compra, você vive o jogo!
     </p>
 </div>
