feat: create custom access denied page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         Bem vindo ao ControlQuest, o painel administrativo da LVL-UP Store.
     </p>
     <p class="fade-in fs-6">
-        Crie, edite, delete ou visualize as entidades através da Navbar. Basta um clique na entidade que você quer, e nosso painel lhe redirecionará.
+        Crie, edite, delete ou visualize as entidades através da Navbar. Basta um clique na entidade que você quer manipular, e nosso painel lhe redirecionará.
         
     </p>
 </div>
