edit login and register pages styles

--- a/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -6,5 +6,7 @@
     <h1 style="color: red;">Acesso Negado</h1>
     <p>Você não tem permissão para acessar este recurso.</p>
     <img src="~/acess-denied.png" alt="Acesso Negado" style="width: 250px; display: block; margin: 0 auto;" />
-    <a href="/" class="btn btn-primary" style="display: block; margin-top: 20px; width: 200px; margin-left: auto; margin-right: auto;">Voltar para a Home</a>
+    <a href="/" style="color: red; text-decoration: none; font-size: 18px; display: inline-block; margin-top: 20px; padding: 10px 20px; border: 2px solid red; border-radius: 5px; text-align: center;">
+        Voltar
+    </a>
 </div>
