--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Cadastrar-se";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="color: #FFA500;">@ViewData["Title"]</h1>
 
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Crie uma nova conta.</h2>
+            <h2 style="color: #FFA500;">Crie uma nova conta.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
@@ -42,7 +42,7 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h3>Use outro serviço para se registrar.</h3>
+            <h3 style="color: #FFA500;">Use outro serviço para se registrar.</h3>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
@@ -62,6 +62,7 @@
                         <div>
                             <p>
                                 @foreach (var provider in Model.ExternalLogins!)
+
                                 {
                                     <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Entrar usando sua conta @provider.DisplayName">@provider.DisplayName</button>
                                 }
