--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+
 @{
 }
 
@@ -8,10 +9,8 @@
     Layout = "_StoreLayout";
 }
 
-
-
 <div class="text-center mt-5">
-    <h1 class="display-4 fade-in">
+    <h1 class="display-4 fade-in" style="color: #FFA500;">
         LVL-UP Store,
     </h1>
     <p class="fade-in fs-4">
