--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,14 +56,6 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Reviews" asp-action="Index">Reviews</a>
                         </li>
                     </ul>
-                    <a class="nav-link d-flex align-items-center text-light" asp-area="" asp-controller="Cart" asp-action="Index">
-                        <img src="~/shoppingcart.png" 
-                             alt="Carrinho" 
-                             width="32" 
-                             height="32" 
-                             class="me-2" 
-                             style="background-color: transparent; border-radius: 50%; object-fit: cover;" />
-                    </a>
 
                     <!-- Search Form -->
 @*                     <form class="d-flex">
@@ -82,11 +74,13 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted text-center py-3">
         <div class="container">
-            &copy; 2024 - UltraStore. Todos os direitos reservados - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - LVL-UP Store - Todos os direitos reservados
+            <a href="/" class="btn btn-link">Voltar para loja</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
