--- a/Views/Shared/_StoreLayout.cshtml
+++ b/Views/Shared/_StoreLayout.cshtml
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LvlUp Store - Stay tuned.</title>
     <link rel="icon" href="~/favicon.ico" type="image/x-icon" />
-     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- FontAwesome para os ícones -->
+    @RenderSection("Scripts", required: false)
+
     <style>
+        /* Garanta que o conteúdo ocupe toda a altura da tela */
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Faz o footer ir para o final */
+        .footer {
+            margin-top: auto;
+        }
+
         .navbar {
             height: 100px; /* Defina a altura desejada para a navbar */
         }
@@ -41,16 +55,12 @@
                 <!-- Collapsible wrapper -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <!-- Navbar brand -->
-                <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                    <img src="~/logo.png"
-                         alt="LVL-UP Store Logo"
-                         style="max-height: 200px !important; width: auto !important; object-fit: contain; height: 100%;" 
-                         loading="lazy" />
-                </a>
-
-
-
-
+                    <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                        <img src="~/logo.png"
+                             alt="LVL-UP Store Logo"
+                             style="max-height: 200px !important; width: auto !important; object-fit: contain; height: 100%;"
+                             loading="lazy" />
+                    </a>
 
                     <!-- Left links -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -67,6 +77,11 @@
                             <a class="nav-link" asp-area="" asp-controller="Store" asp-action="NewReleases">Novidades</a>
                         </li>
                     </ul>
+                    <!-- Search box centered -->
+                    <div class="d-flex justify-content-center flex-grow-1">
+                        <input type="text" class="form-control" placeholder="Pesquise algum produto aqui." style="max-width: 400px; width: 50%;" />
+                    </div>
+
                 </div>
                 <!-- Collapsible wrapper -->
                 <!-- Right elements -->
@@ -109,7 +124,7 @@
                            role="button"
                            data-bs-toggle="dropdown"
                            aria-expanded="false">
-                            <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/Default_pfp.jpg"
                                  class="rounded-circle"
                                  height="30"
                                  alt="User Avatar"
@@ -128,12 +143,14 @@
                             </li>
                         </ul>
                     </div>
+                    @Html.Partial("_LoginPartial")
                 </div>
                 <!-- Right elements -->
             </div>
             <!-- Container wrapper -->
         </nav>
         <!-- Navbar -->
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -143,9 +160,12 @@
 
     <footer class="footer text-muted text-center py-3">
         <div class="container">
-            &copy; 2024 - UltraStore - Todos os direitos reservados
+            &copy; 2024 - LVL-UP Store - Todos os direitos reservados
+            <br />
+            <a href="/Home" class="btn btn-link">Painel Administrativo</a>
         </div>
     </footer>
+
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
