initialize search box function

--- a/Views/Shared/Error404.cshtml
+++ b/Views/Shared/Error404.cshtml
@@ -1,5 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Erro 404 - Página não encontrada";
+    ViewData["Title"] = "Página não encontrada";
+}
+
+@{
+    Layout = null;
 }
 
 <!DOCTYPE html>
