--- a/Views/Clients/Create.cshtml
+++ b/Views/Clients/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create Client";
 }
 
+@using UltraStore.Enums
+
 <h1>Create</h1>
 
 <h4>Client</h4>
@@ -39,7 +41,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" class="form-control"></select>
+                <select asp-for="Gender" class="form-control" asp-items="Html.GetEnumSelectList<Gender>()"></select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
