--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create Game";
 }
 
+@using UltraStore.Enums
+
 <h1>Create</h1>
 
 <h4>Game</h4>
@@ -50,9 +52,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
-                <select asp-for="Rating" class="form-control"></select>
+                <select asp-for="Rating" class="form-control" asp-items="Html.GetEnumSelectList<Rating>()"></select>
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
+
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsMultiplayer" /> @Html.DisplayNameFor(model => model.IsMultiplayer)
