--- a/Views/Developers/Edit.cshtml
+++ b/Views/Developers/Edit.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Edit Developer";
 }
 
+@using UltraStore.Enums
+
 <h1>Edit</h1>
 
 <h4>Developer</h4>
@@ -25,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DeveloperType" class="control-label"></label>
-                <select asp-for="DeveloperType" class="form-control"></select>
+                <select asp-for="DeveloperType" class="form-control" asp-items="Html.GetEnumSelectList<DeveloperType>()"></select>
                 <span asp-validation-for="DeveloperType" class="text-danger"></span>
             </div>
             <div class="form-group">
