--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SoftwareId" class="control-label"></label>
-                <select asp-for="SoftwareId" class="form-control" asp-items="ViewBag.PlatformsId"></select>
+                <select asp-for="SoftwareId" class="form-control" asp-items="ViewBag.SoftwareId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
