--- a/Views/Games/Edit.cshtml
+++ b/Views/Games/Edit.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Edit Game";
 }
 
+@using UltraStore.Enums
+
 <h1>Edit</h1>
 
 <h4>Game</h4>
@@ -55,7 +57,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
-                <select asp-for="Rating" class="form-control"></select>
+                <select asp-for="Rating" class="form-control" asp-items="Html.GetEnumSelectList<Rating>()"></select>
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
