fix incorrect namespace name(from UltraStore to LvlUp)

--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model UltraStore.Models.Game
+﻿@model LvlUp.Models.Game
 
 @{
     ViewData["Title"] = "Create Game";
 }
 
-@using UltraStore.Enums
+@using LvlUp.Enums
 
 <h1>Create</h1>
 
