fix model game - delete list of reviews

--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -64,7 +64,7 @@
                 @Html.DisplayFor(modelItem => item.Developer.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Publisher.ComercialEmail)
+                @Html.DisplayFor(modelItem => item.Publisher.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Franchise.Name)
