initial config of home page carousel

--- a/Views/Shared/_StoreLayout.cshtml
+++ b/Views/Shared/_StoreLayout.cshtml
@@ -6,8 +6,8 @@
     <title>LVL-UP Store - Stay tuned.</title>
     <link rel="icon" href="~/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- FontAwesome para os ícones -->
-    @RenderSection("Scripts", required: false)
 
     <style>
         /* Garanta que o conteúdo ocupe toda a altura da tela */
@@ -207,6 +207,9 @@
             }
         });
     </script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    @RenderSection("Scripts", required: false)
+
 
 </body>
 </html>
