--- a/Views/Games/Create.cshtml
+++ b/Views/Games/Create.cshtml
@@ -12,8 +12,9 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="All" class="text-danger"></div>
+        <!-- Atualizado o enctype para aceitar uploads de arquivos -->
+        <form asp-action="Create" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -36,15 +37,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="DeveloperId" class="control-label"></label>
-                <select asp-for="DeveloperId" class ="form-control" asp-items="ViewBag.DeveloperId"></select>
+                <select asp-for="DeveloperId" class="form-control" asp-items="ViewBag.DeveloperId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PublisherId" class="control-label"></label>
-                <select asp-for="PublisherId" class ="form-control" asp-items="ViewBag.PublisherId"></select>
+                <select asp-for="PublisherId" class="form-control" asp-items="ViewBag.PublisherId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="FranchiseId" class="control-label"></label>
-                <select asp-for="FranchiseId" class ="form-control" asp-items="ViewBag.FranchiseId"></select>
+                <select asp-for="FranchiseId" class="form-control" asp-items="ViewBag.FranchiseId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="SoftwareId" class="control-label"></label>
@@ -61,6 +62,14 @@
                     <input class="form-check-input" asp-for="IsMultiplayer" /> @Html.DisplayNameFor(model => model.IsMultiplayer)
                 </label>
             </div>
+
+            <!-- Campo de upload de imagem -->
+            <div class="form-group">
+                <label for="imageFile" class="control-label">Imagem do jogo</label>
+                <input type="file" class="form-control" id="imageFile" name="imageFile" />
+                <span asp-validation-for="ImagePath" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" /> <a asp-action="Index" class="btn btn-outline-primary">Voltar</a>
             </div>
@@ -69,5 +78,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
