--- a/Views/Store/GameInfo.cshtml
+++ b/Views/Store/GameInfo.cshtml
@@ -43,5 +43,5 @@
 
 <!-- Botão para voltar à lista de jogos -->
 <div class="text-center mt-4">
-    <a href="@Url.Action("Index", "Home")" class="btn btn-primary">Voltar para a loja</a>
+    <a href="@Url.Action("Index", "Store")" class="btn btn-primary">Voltar para a loja</a>
 </div>
