--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -4,8 +4,12 @@
     ViewData["Title"] = "View Cart";
 }
 
+@{
+    Layout = "_StoreLayout";
+}
+
 <br />
-<h2 style="text-align: center; margin-bottom: 40px; ">Seu Carrinho</h2>
+<h2 style="text-align: center; margin-bottom: 40px; color: orange;">Seu Carrinho</h2>
 <table class="table">
     <thead>
         <tr>
@@ -30,5 +34,5 @@
         }
     </tbody>
 </table>
-<h3>Total: @Model.Total.ToString("C")</h3>
+<h3 style="color: orange;">Total: @Model.Total.ToString("C")</h3>
 <a asp-action="Checkout" class="btn btn-success">Finalizar Compra</a>
