--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -26,7 +26,7 @@
                 <td>@item.Game.Title</td>
                 <td>@item.UnitPrice.ToString("C")</td>
                 <td>@item.Quantity</td>
-                <td>@(item.Quantity * item.UnitPrice).ToString("C")</td>
+                <td>R$ @(item.Quantity * item.UnitPrice)</td>
                 <td>
                     <a asp-action="RemoveFromCart" asp-route-cartItemId="@item.Id" class="btn btn-danger">Remover</a>
                 </td>
